--- a/index.html
+++ b/index.html
@@ -1,153 +1,64 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Sophia.com — Private Journal</title>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Sophia.com — Private xoxo</title>
 <style>
-:root{
-  --bg:#07080b;
-  --bg2:#0b0d12;
-  --ink:#f6f6f6;
-  --muted:#c9c9cf;
-  --line:rgba(255,255,255,.14);
-  --line-2:rgba(255,255,255,.08);
-  --accent:#ffffff;
-  --danger:#ff6b6b;
-}
-*{box-sizing:border-box}
-html,body{height:100%}
-body{
-  margin:0;
-  color:var(--ink);
-  font:16px/1.55 ui-sans-serif, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-  background:
-    radial-gradient(1200px 800px at 20% -10%, #12141c 0%, var(--bg) 60%),
-    linear-gradient(180deg, var(--bg2), var(--bg));
-  letter-spacing:.2px;
-}
-.grain:before{
-  content:"";
-  position:fixed;inset:0;pointer-events:none;
-  background-image:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="140" height="140"><filter id="n"><feTurbulence type="fractalNoise" baseFrequency="0.9" numOctaves="2" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23n)" opacity="0.03"/></svg>');
-  mix-blend-mode:soft-light;
-}
-header{
-  position:sticky;top:0;z-index:5;
-  backdrop-filter:saturate(120%) blur(8px);
-  background:linear-gradient(180deg, rgba(7,8,11,.8), rgba(7,8,11,.25) 60%, transparent);
-  border-bottom:1px solid var(--line-2);
-}
-.brand{
-  max-width:430px;margin:0 auto;padding:16px 14px;
-  display:flex;align-items:center;justify-content:space-between;gap:10px;
-}
-.logo{
-  display:flex;align-items:center;gap:10px;letter-spacing:.14em;text-transform:uppercase;
-  font-weight:700;font-size:13px;
-}
-.logo-dot{
-  width:10px;height:10px;border-radius:999px;
-  border:1px solid rgba(255,255,255,.7);
-  box-shadow:0 0 0 1px rgba(255,255,255,.2) inset, 0 0 16px rgba(255,255,255,.15);
-}
+:root{--bg:#07080b;--bg2:#0b0d12;--ink:#f6f6f6;--muted:#c9c9cf;--line:rgba(255,255,255,.14);--line-2:rgba(255,255,255,.08);--accent:#fff;--danger:#ff6b6b}
+*{box-sizing:border-box}html,body{height:100%}
+body{margin:0;color:var(--ink);font:16px/1.55 ui-sans-serif,-apple-system,Segoe UI,Roboto,Helvetica,Arial;background:
+radial-gradient(1200px 800px at 20% -10%, #12141c 0%, var(--bg) 60%),
+linear-gradient(180deg, var(--bg2), var(--bg));letter-spacing:.2px;overflow-x:hidden}
+.grain:before{content:"";position:fixed;inset:0;pointer-events:none;background-image:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="140" height="140"><filter id="n"><feTurbulence type="fractalNoise" baseFrequency="0.9" numOctaves="2" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23n)" opacity="0.03"/></svg>');mix-blend-mode:soft-light}
+header{position:sticky;top:0;z-index:5;backdrop-filter:saturate(120%) blur(8px);background:linear-gradient(180deg, rgba(7,8,11,.8), rgba(7,8,11,.25) 60%, transparent);border-bottom:1px solid var(--line-2)}
+.brand{max-width:430px;margin:0 auto;padding:16px 14px;display:flex;align-items:center;justify-content:space-between;gap:10px}
+.logo{display:flex;align-items:center;gap:10px;letter-spacing:.14em;text-transform:uppercase;font-weight:700;font-size:13px}
+.logo-dot{width:10px;height:10px;border-radius:999px;border:1px solid rgba(255,255,255,.7);box-shadow:0 0 0 1px rgba(255,255,255,.2) inset, 0 0 16px rgba(255,255,255,.15)}
 .tag{color:var(--muted);font-size:12px;opacity:.9}
 main{min-height:100%;display:grid;grid-template-rows:auto 1fr}
-.column{
-  width:min(100%,430px);
-  margin:14px auto 110px;
-  display:grid;gap:16px;
-  padding:0 12px;
-}
-.card{
-  background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.01));
-  border:1px solid var(--line);
-  border-radius:14px;
-  box-shadow:0 20px 60px rgba(0,0,0,.5);
-}
+.column{width:min(100%,430px);margin:14px auto 110px;display:grid;gap:16px;padding:0 12px}
+.card{background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.01));border:1px solid var(--line);border-radius:14px;box-shadow:0 20px 60px rgba(0,0,0,.5)}
 .post{padding:12px;display:grid;gap:12px}
-.post-img{
-  width:100%;height:420px;object-fit:cover;border-radius:10px;
-  background:#0a0c10;border:1px solid var(--line);
-}
-.caption{
-  font-family:ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  font-size:16px;white-space:pre-wrap;
-  color:var(--ink);
-}
-.meta{
-  display:flex;justify-content:space-between;align-items:center;
-  color:var(--muted);font-size:12px;border-top:1px solid var(--line-2);padding-top:10px;
-}
-.btn{
-  appearance:none;border:none;border-radius:999px;
-  padding:8px 14px;cursor:pointer;font-weight:600;
-  letter-spacing:.02em;background:transparent;color:var(--ink);
-  border:1px solid var(--line);
-  transition:transform .04s ease, opacity .2s, background .2s, border-color .2s;
-}
-.btn:active{transform:translateY(1px)}
-.btn-outline{background:transparent}
-.btn-danger{color:var(--danger);border-color:rgba(255,107,107,.35)}
-.btn[disabled]{opacity:.5;cursor:not-allowed}
-
-.empty{
-  text-align:center;color:var(--muted);padding:30px;
-  border:1px dashed var(--line);border-radius:12px
-}
-
-.composer{
-  position:fixed;left:0;right:0;bottom:0;z-index:10;
-  padding:12px 12px 16px;display:grid;place-items:center;
-  background:linear-gradient(180deg, transparent, rgba(5,6,9,.85) 25%, rgba(5,6,9,.95));
-  backdrop-filter:saturate(130%) blur(8px);
-  border-top:1px solid var(--line-2);
-}
-.composer-inner{
-  width:min(100%,430px);
-  display:grid;gap:10px;
-  background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.01));
-  border:1px solid var(--line);border-radius:14px;padding:10px;
-  box-shadow:0 8px 26px rgba(0,0,0,.6);
-}
+.post-img{width:100%;height:420px;object-fit:cover;border-radius:10px;background:#0a0c10;border:1px solid var(--line)}
+.caption{font-family:ui-serif,Georgia,Cambria,"Times New Roman",Times,serif;font-size:16px;white-space:pre-wrap;color:var(--ink)}
+.meta{display:flex;justify-content:space-between;align-items:center;color:var(--muted);font-size:12px;border-top:1px solid var(--line-2);padding-top:10px}
+.actions{display:flex;gap:8px}
+.iconbtn{appearance:none;border:1px solid var(--line);background:transparent;color:var(--ink);border-radius:999px;padding:6px 10px;font-weight:600;cursor:pointer}
+.count{margin-left:6px;color:var(--muted)}
+.comment-box{display:grid;gap:8px;border-top:1px dashed var(--line-2);padding-top:10px}
+.comment{font-size:14px;color:var(--ink);border-left:1px solid var(--line);padding-left:8px}
+.composer{position:fixed;left:0;right:0;bottom:0;z-index:10;padding:12px 12px 16px;display:grid;place-items:center;background:linear-gradient(180deg, transparent, rgba(5,6,9,.85) 25%, rgba(5,6,9,.95));backdrop-filter:saturate(130%) blur(8px);border-top:1px solid var(--line-2)}
+.composer-inner{width:min(100%,430px);display:grid;gap:10px;background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.01));border:1px solid var(--line);border-radius:14px;padding:10px;box-shadow:0 8px 26px rgba(0,0,0,.6)}
 .row{display:flex;gap:10px;align-items:center}
 .file{position:relative;flex:0 0 auto;display:flex;align-items:center;gap:10px}
 input[type=file]{position:absolute;inset:0;opacity:0;cursor:pointer}
-.pill{
-  display:inline-flex;align-items:center;gap:10px;padding:8px 12px;border-radius:999px;
-  background:transparent;border:1px solid var(--line);color:var(--muted)
-}
+.pill{display:inline-flex;align-items:center;gap:10px;padding:8px 12px;border-radius:999px;background:transparent;border:1px solid var(--line);color:var(--muted)}
 .icon{display:inline-flex}
-.thumb{
-  width:48px;height:48px;border-radius:8px;object-fit:cover;display:none;
-  border:1px solid var(--line);background:#0a0c10
-}
-textarea{
-  flex:1 1 auto;width:100%;min-height:44px;max-height:120px;resize:vertical;
-  background:rgba(255,255,255,.02);color:var(--ink);
-  border:1px solid var(--line);border-radius:12px;padding:10px 12px;outline:none;
-}
+.thumb{width:48px;height:48px;border-radius:8px;object-fit:cover;display:none;border:1px solid var(--line);background:#0a0c10}
+textarea{flex:1 1 auto;width:100%;min-height:44px;max-height:120px;resize:vertical;background:rgba(255,255,255,.02);color:var(--ink);border:1px solid var(--line);border-radius:12px;padding:10px 12px;outline:none}
 textarea:focus{border-color:#fff}
-.post-btn{
-  background:transparent;color:#111;border-color:#fff;
-  background-image:linear-gradient(180deg,#fff,#e6e6e6);
-}
-.post-btn span{color:#000}
-hr.hair{
-  height:1px;border:0;background:var(--line-2);margin:6px 0 0 0
-}
+.cta-row{display:flex;gap:10px;justify-content:flex-end}
+.btn{appearance:none;border:1px solid var(--line);border-radius:999px;padding:8px 14px;cursor:pointer;font-weight:600;background:transparent;color:var(--ink)}
+.btn-danger{color:var(--danger);border-color:rgba(255,107,107,.35)}
+.btn[disabled]{opacity:.5;cursor:not-allowed}
+.hearts{position:fixed;inset:0;pointer-events:none}
+.heart{position:absolute;width:14px;height:14px;color:#fff;opacity:.25;filter:grayscale(1) contrast(1.2);mix-blend-mode:screen;animation:float 8s linear infinite,glitch 1.6s steps(2,end) infinite}
+.heart.right{right:8px}
+.heart.left{left:8px}
+.heart svg{width:100%;height:100%}
+@keyframes float{0%{transform:translateY(110vh) translateX(0)}100%{transform:translateY(-10vh) translateX(0)}}
+@keyframes glitch{0%,100%{transform:translateY(0)}20%{transform:translateY(-1px) skewX(.5deg)}40%{transform:translateY(1px) skewX(-.5deg)}60%{opacity:.2}80%{opacity:.35}}
 </style>
 </head>
 <body class="grain">
 <header>
   <div class="brand">
-    <div class="logo">
-      <div class="logo-dot"></div>
-      <div>Sophia.com</div>
-    </div>
-    <div class="tag">private journal</div>
+    <div class="logo"><div class="logo-dot"></div><div>Sophia.com</div></div>
+    <div class="tag">private xoxo</div>
   </div>
 </header>
+
+<div class="hearts" id="hearts"></div>
 
 <main>
   <section class="column" id="feed"></section>
@@ -167,11 +78,10 @@ hr.hair{
         </label>
       </div>
       <textarea id="caption" placeholder="Add a caption…"></textarea>
-      <button id="post" class="btn post-btn" disabled><span>Post</span></button>
     </div>
-    <hr class="hair">
-    <div class="row" style="justify-content:flex-end">
-      <button id="clear" class="btn btn-outline">Clear</button>
+    <div class="cta-row">
+      <button id="clear" class="btn">Clear</button>
+      <button id="post" class="btn" disabled>Post</button>
     </div>
   </div>
 </footer>
@@ -183,7 +93,24 @@ const thumb=document.getElementById('thumb')
 const caption=document.getElementById('caption')
 const postBtn=document.getElementById('post')
 const clearBtn=document.getElementById('clear')
+const heartsWrap=document.getElementById('hearts')
 let fileBlob=null
+
+function heartSvg(){return `<svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 21s-7.534-4.534-9.192-8.355C1.02 10.21 2.5 6.5 6.5 6.5c2.06 0 3.35 1.07 4 2 0.65-.93 1.94-2 4-2 4 0 5.48 3.71 3.692 6.145C19.534 16.466 12 21 12 21z"/></svg>`}
+function spawnHearts(){
+  const n=18
+  for(let i=0;i<n;i++){
+    const el=document.createElement('div')
+    el.className='heart ' + (i%2?'left':'right')
+    el.style.animationDelay=(Math.random()*4)+'s'
+    el.style.top=(Math.random()*100)+'vh'
+    el.style.opacity=(0.15+Math.random()*0.25).toFixed(2)
+    el.style.transform=`translateY(${Math.random()*120}vh)`
+    el.innerHTML=heartSvg()
+    heartsWrap.appendChild(el)
+  }
+}
+spawnHearts()
 
 function fmt(ts){const d=new Date(ts);return d.toLocaleString([], {year:'numeric',month:'short',day:'numeric',hour:'2-digit',minute:'2-digit'})}
 
@@ -197,14 +124,38 @@ async function load(){
     const cap=p.caption?document.createElement('div'):null
     if(cap){cap.className='caption';cap.textContent=p.caption}
     const meta=document.createElement('div');meta.className='meta'
+    const left=document.createElement('div');left.className='actions'
+    const like=document.createElement('button');like.className='iconbtn';like.textContent='♥'
+    const likeCount=document.createElement('span');likeCount.className='count';likeCount.textContent=(p.like_count||0)
+    like.addEventListener('click',async()=>{await fetch(`/api/posts/${p.id}/like`,{method:'POST'});likeCount.textContent=parseInt(likeCount.textContent,10)+1})
+    left.appendChild(like);left.appendChild(likeCount)
+    const right=document.createElement('div');right.style.display='flex';right.style.alignItems='center';right.style.gap='8px'
     const time=document.createElement('span');time.textContent=fmt(p.created_at||Date.now())
     const del=document.createElement('button');del.className='btn btn-danger';del.textContent='Delete'
     del.addEventListener('click',async()=>{await fetch('/api/posts/'+p.id,{method:'DELETE'});load()})
-    meta.appendChild(time);meta.appendChild(del)
-    card.appendChild(img); if(cap) card.appendChild(cap); card.appendChild(meta)
+    right.appendChild(time);right.appendChild(del)
+    meta.appendChild(left);meta.appendChild(right)
+    const cbox=document.createElement('div');cbox.className='comment-box'
+    const list=document.createElement('div');list.dataset.role='comments'
+    const form=document.createElement('form');form.style.display='flex';form.style.gap='8px';form.addEventListener('submit',async(e)=>{e.preventDefault();const input=form.querySelector('input');const body=input.value.trim();if(!body) return;await fetch(`/api/posts/${p.id}/comments`,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({body})});input.value='';await loadComments(p.id,list)})
+    const input=document.createElement('input');input.type='text';input.placeholder='Write a comment…';input.style.flex='1';input.style.background='rgba(255,255,255,.02)';input.style.border='1px solid var(--line)';input.style.borderRadius='10px';input.style.color='var(--ink)';input.style.padding='8px 10px'
+    const send=document.createElement('button');send.className='btn';send.textContent='Comment'
+    form.appendChild(input);form.appendChild(send)
+    cbox.appendChild(list);cbox.appendChild(form)
+    card.appendChild(img); if(cap) card.appendChild(cap); card.appendChild(meta); card.appendChild(cbox)
     feed.appendChild(card)
+    loadComments(p.id,list)
   }
   window.scrollTo({top:0,behavior:'smooth'})
+}
+
+async function loadComments(id,container){
+  const r=await fetch(`/api/posts/${id}/comments`); const data=await r.json()
+  container.innerHTML=''
+  for(const c of data){
+    const el=document.createElement('div');el.className='comment';el.textContent=c.body
+    container.appendChild(el)
+  }
 }
 
 function setThumb(src){ if(src){thumb.src=src;thumb.style.display='block';postBtn.disabled=false} else {thumb.removeAttribute('src');thumb.style.display='none';postBtn.disabled=true} }
